--- a/WebsiteCaNhan4/trangdangky.html
+++ b/WebsiteCaNhan4/trangdangky.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title> Website Cá Nhân Hỗ Trợ Việc Giảng Dạy Của Giảng Viên</title>
@@ -9,6 +10,8 @@
 	<!-- CSS Riêng -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="shortcut icon" href="img/icon.ico" />
+	<!--  Responsive-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- Dong Ho -->
 	<link href="css/datepicker.css" rel="stylesheet">
 	<script src="js/jquery-2.1.4.min.js"></script>
@@ -18,232 +21,176 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700">
 	<script src="jquery/jquery-3.1.0.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function(){
-			if ($('#back-to-top').length) {
-			    var scrollTrigger = 10, // px
-			    backToTop = function () {
-			    	var scrollTop = $(window).scrollTop();
-			    	if (scrollTop > scrollTrigger) {
-			    		$('#back-to-top').fadeIn();
-			    	} else {
-			    		$('#back-to-top').fadeOut();
-			    	}
-			    };
-			    backToTop();
-			    $(window).on('scroll', function () {
-			    	backToTop();
-			    });
-			    $('#back-to-top').on('click', function (e) {
-			    	e.preventDefault();
-			    	$('html,body').animate({
-			    		scrollTop: 0
-			    	}, 700);
-			    });
-			}
-		});
 
-	</script>
 </head>
+
 <body>
 	<div class="container">
-		<!-- Header -->
-		<div id="header" class="row">
-			<div class="col-md-7">
-				<img src="img/logo.jpg" width="150px" height="150px">
-				<div id="name-logo">
-					<h2> WEBSITE CÁ NHÂN </h2>
-					<h3> Hỗ Trợ Việc Giảng Dạy Của Giảng Viên</h3>
-					<h3> Nhóm 14 - LTW Sáng T3 </h3>
-				</div>			
-			</div>
-			<div class="col-md-5">
-				<div id="login" class="col-md-7">
-					<ul>	
-						<li><a href="">ĐĂNG KÝ</a></li>
-						<li><a href=""><span class="glyphicon glyphicon-user" aria-hidden="true"></span> ĐĂNG NHẬP</a></li>
-					</ul>
-				</div>	
+		<!-- HEADER-->
+		<header>
+			<div class="header-topbar">
+				<div class="container">
+					<div class="topbar-left pull-left">
+						<div class="email"><a href=""><i class="topbar-icon fa fa-envelope-o"></i><span>LTW Sáng T3</span></a></div>
+						<div class="hotline"><a href=""><i class="topbar-icon fa fa-phone"></i><span>0909090909</span></a></div>
 
-				<div id="custom-search-input">
-					<div id="search" class="input-group col-md-5">
-						<input type="text" class="  search-query form-control" placeholder="Tìm kiếm" />
-						<span class="input-group-btn">
-							<button class="btn btn-success" type="button">
-								<span class=" glyphicon glyphicon-search"></span>
-							</button>
-						</span>
+					</div>
+
+
+					<div class="topbar-right pull-right">
+						<div class="socials">
+							<a href="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.youtube.com/" class="youtube"><i class="fa fa-youtube"></i></a>
+						</div>
+						<div class="group-sign-in">
+
+						</div>
+					</div>
+
+
+				</div>
+			</div>
+
+			<div class="header-main homepage-01">
+				<div class="container">
+					<div class="header-main-wrapper">
+						<div class="navbar-header">
+							<div class="logo pull-left">
+								<a href="trangchu.html" class="header-logo"><img src="img/logo.png" alt="" /></a>
+							</div>
+							<button type="button" data-toggle="collapse" data-target=".navigation" class="navbar-toggle edugate-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+						</div>
+						<nav class="navigation collapse navbar-collapse pull-right">
+							<ul class="nav-links nav navbar-nav">
+
+								<li class="active"><a href="#" class="main-menu">Trang chủ </a> </li>
+								<li class="dropdown">
+									<a href="#" class="main-menu data-toggle=" dropdown "">Các khóa học <span class="fa fa-angle-down icons-dropdown"></span></a>
+									<ul class="dropdown-menu edugate-dropdown-menu-1">
+										<li>
+											<a href="#" class="link-page">Android</a>
+										</li>
+										<li>
+											<a href=="#" class="link-page">Java</a>
+										</li>
+										<li>
+											<a href=="#" class="link-page">Java</a>
+										</li>
+										<li>
+											<a href=="#" class="link-page">Lập trình web</a>
+										</li>
+									</ul>
+								</li>
+
+								<li class=""><a href="#" class="main-menu">Liên hệ </a></li>
+
+								<li style="margin-left:5em" class=""><a href="#" class="main-menu"> Đăng Nhập </a></li>
+								<li class=""><a href="#" class="main-menu"> Đăng Ký </a></li>
+								<li class="button-search">
+									<p class="main-menu"><i class="fa fa-search"></i></p>
+								</li>
+								<div class="nav-search  hide">
+									<form><input type="text" placeholder="Tìm kiếm" class="searchbox" />
+										<button type="submit" class="searchbutton fa fa-search"></button>
+									</form>
+								</div>
+							</ul>
+						</nav>
 					</div>
 				</div>
 			</div>
-		</div>	
+		</header>
 		<!-- End Header -->
 		<!--Content-->
 		<div class="content">
-			<!--Slider Image-->
-			<div class="img-slide">
-				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-					<!-- Indicators -->
-					<ol class="carousel-indicators">
-						<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-
-					</ol>
-
-					<!-- Wrapper for slides -->
-					<div class="carousel-inner" role="listbox">
-						<div class="item active">
-							<img src="img/slide1.jpg" alt="hoclaptrinhtainha">
-							<div class="carousel-caption">
-								Học lập trình tại nhà
-							</div>
-						</div>
-						<div class="item">
-							<img src="img/slide2.jpg" alt="...">
-							<div class="carousel-caption">
-								Học lập trình tại nhà
-							</div>
-						</div>
-
-					</div>
-
-					<!-- Controls -->
-					<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-						<span class="sr-only">Lùi</span>
-					</a>
-					<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-						<span class="sr-only">Tới</span>
-					</a>
-				</div>
-			</div>
-			<!-- End Slider Image-->
-
-			<!--Navbar-->
-			<div class="navbar">
-				<nav class="navbar navbar-light" style="background-color: #1B5A96;">
-					<ul class="nav navbar-nav">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">Trang Chủ <span class="sr-only">(current)</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Giới thiệu</a>
-						</li>
-
-					</ul>
-				</nav>
-			</div>
-			<!-- End Navbar-->
-
-			<!--Chia Khung-->
-			<div class="container-fluid">
-				<div class="row vdivide">
-					<div class="col-md-9">
-						<div id = "Formregister">
+		<!--Devide Body-->
+			<div class="content-body">
+				<div class="container">
+					<div class="col-md-12">
+						<div id="Formregister">
 							<div class="row">
-							    <div class="col-xs-12 col-sm-6 col-md-8 col-sm-offset-2 col-md-offset-2">
+								<div class="col-xs-12 col-sm-6 col-md-8 col-sm-offset-2 col-md-offset-2">
 									<form role="form">
-										<h2 style="color: blue; font-weight: bold;">Register</h2>
+										<h2 style="color: blue; font-weight: bold;">Đăng ký</h2>
 										<hr class="colorgraph">
 										<div class="row">
-											<div class="col-xs-12 col-sm-6 col-md-6">
+											<div class="col-xs-12 col-sm-12 col-md-12">
+
 												<div class="form-group">
-							                        <input type="text" name="first_name" id="first_name" class="form-control input-lg" placeholder="First Name" tabindex="1">
+													<input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Tên tài khoản" tabindex="1">
 												</div>
-											</div>
-											<div class="col-xs-12 col-sm-6 col-md-6">
 												<div class="form-group">
-													<input type="text" name="last_name" id="last_name" class="form-control input-lg" placeholder="Last Name" tabindex="2">
+													<input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email" tabindex="2">
 												</div>
-											</div>
-										</div>
-										<div class="form-group">
-											<input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Display Name" tabindex="3">
-										</div>
-										<div class="form-group">
-											<input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address" tabindex="4">
-										</div>
-										<div class="row">
-											<div class="col-xs-12 col-sm-6 col-md-6">
 												<div class="form-group">
-													<input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" tabindex="5">
+													<input type="phone" name="phone" id="phone" class="form-control input-lg" placeholder="Số Điện Thoại" tabindex="3">
 												</div>
-											</div>
-											<div class="col-xs-12 col-sm-6 col-md-6">
-												<div class="form-group">
-													<input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Confirm Password" tabindex="6">
+												<div class="row">
+													<div class="col-xs-12 col-sm-6 col-md-6">
+														<div class="form-group">
+															<input type="password" name="password" id="password" class="form-control input-lg" placeholder="Mật Khẩu" tabindex="4">
+														</div>
+													</div>
+													<div class="col-xs-12 col-sm-6 col-md-6">
+														<div class="form-group">
+															<input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Nhập lại mật khẩu" tabindex="6">
+														</div>
+													</div>
 												</div>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-xs-4 col-sm-3 col-md-3">
-												<span class="button-checkbox">
-													<button type="button" class="btn" data-color="info" tabindex="7">I Agree</button>
-							                        <input type="checkbox" name="t_and_c" id="t_and_c" class="hidden" value="1">
-												</span>
-											</div>
-											<div class="col-xs-8 col-sm-9 col-md-9">
-												 By clicking <strong class="label label-primary">Register</strong>, you agree to the <a href="#" data-toggle="modal" data-target="#t_and_c_m">Terms and Conditions</a> set out by this site, including our Cookie Use.
-											</div>
-										</div>
-										
-										<hr class="colorgraph">
-										<div class="row">
-											<div class="col-xs-12 col-md-6"><input type="submit" value="Register" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
-											<div class="col-xs-12 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg">Sign In</a></div>
-										</div>
+
+												<hr class="colorgraph">
+												<div class="row">
+													<div class="col-xs-12 col-md-6"><input type="submit" value="Đăng ký" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
+													<div class="col-xs-12 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg">Đăng nhập</a></div>
+												</div>
 									</form>
+									</div>
+									</div>
+									<!-- Modal -->
+									<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+										<div class="modal-dialog modal-lg">
+											<div class="modal-content">
+												<div class="modal-header">
+													<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+													<h4 class="modal-title" id="myModalLabel">Terms & Conditions</h4>
+												</div>
+												<div class="modal-body">
+													<p>Hello</p>
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
+												</div>
+											</div>
+											<!-- /.modal-content -->
+										</div>
+										<!-- /.modal-dialog -->
+									</div>
+									<!-- /.modal -->
 								</div>
 							</div>
-							<!-- Modal -->
-							<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-								<div class="modal-dialog modal-lg">
-									<div class="modal-content">
-										<div class="modal-header">
-											<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-											<h4 class="modal-title" id="myModalLabel">Terms & Conditions</h4>
-										</div>
-										<div class="modal-body">
-											<p>Hello</p>
-										</div>
-										<div class="modal-footer">
-											<button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
-										</div>
-									</div><!-- /.modal-content -->
-								</div><!-- /.modal-dialog -->
-							</div><!-- /.modal -->
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="datepicker-here" data-language='en'></div>
-					</div>
 				</div>
 			</div>
-
-			<!--End Chia Khung-->
+		</div>
+			<!--End Divide Bodu->
 		</div>
 		<!--End Content-->
-		<!--Footer-->
-		<div id="footer" class="row">
-			<div class="col-md-6">
-				<img style="width:40px;	height:40px;padding: 5px" src="img/logo.jpg">
-				&copy 2016 - BẢN QUYỀN THUỘC VỀ NHÓM 14 LTW
-			</div>
-			<div class="col-md-6 powered">
-				<a href="" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-dribbble"><i class="fa fa-facebook"></i></a>
-				<a href="" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-dribbble"><i class="fa fa-youtube"></i></a>
-				<a href="" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-dribbble"><i class="fa fa-google-plus"></i></a>
+			<!--Footer-->
+			<div class="footer" class="row">
+				<div class="container">
+					<div class="col-md-12 text-center">
+						<img style="width:40px;	height:40px;padding: 5px" src="img/logo.jpg"> &copy 2016 - BẢN QUYỀN THUỘC VỀ NHÓM 14 LTW
+					</div>
 
+				</div>
 			</div>
+			<!-- End Footer-->
 		</div>
-		<!-- End Footer-->
-	</div>
-	<img id="back-to-top" src="img/back-to-top.png">
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<!-- Tích hợp JS của Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
+		<img id="back-to-top" src="img/back-to-top.png">
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<!-- Tích hợp JS của Bootstrap -->
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/main.js"></script>
 </body>
 
 </html>
