--- a/WebsiteCaNhan4/trangdangky.html
+++ b/WebsiteCaNhan4/trangdangky.html
@@ -103,75 +103,107 @@
 		<!-- End Header -->
 		<!--Content-->
 		<div class="content">
-		<!--Devide Body-->
+			<!--Devide Body-->
 			<div class="content-body">
 				<div class="container">
 					<div class="col-md-12">
-						<div id="Formregister">
-							<div class="row">
-								<div class="col-xs-12 col-sm-6 col-md-8 col-sm-offset-2 col-md-offset-2">
-									<form role="form">
-										<h2 style="color: blue; font-weight: bold;">Đăng ký</h2>
-										<hr class="colorgraph">
-										<div class="row">
-											<div class="col-xs-12 col-sm-12 col-md-12">
+						<div id="main" ng-app="demoApp" ng-controller="RegisterCtrl">
 
-												<div class="form-group">
-													<input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Tên tài khoản" tabindex="1">
-												</div>
-												<div class="form-group">
-													<input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email" tabindex="2">
-												</div>
-												<div class="form-group">
-													<input type="phone" name="phone" id="phone" class="form-control input-lg" placeholder="Số Điện Thoại" tabindex="3">
-												</div>
-												<div class="row">
-													<div class="col-xs-12 col-sm-6 col-md-6">
-														<div class="form-group">
-															<input type="password" name="password" id="password" class="form-control input-lg" placeholder="Mật Khẩu" tabindex="4">
-														</div>
-													</div>
-													<div class="col-xs-12 col-sm-6 col-md-6">
-														<div class="form-group">
-															<input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Nhập lại mật khẩu" tabindex="6">
-														</div>
-													</div>
-												</div>
-
-												<hr class="colorgraph">
-												<div class="row">
-													<div class="col-xs-12 col-md-6"><input type="submit" value="Đăng ký" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
-													<div class="col-xs-12 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg">Đăng nhập</a></div>
-												</div>
-									</form>
-									</div>
-									</div>
-									<!-- Modal -->
-									<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-										<div class="modal-dialog modal-lg">
-											<div class="modal-content">
-												<div class="modal-header">
-													<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-													<h4 class="modal-title" id="myModalLabel">Terms & Conditions</h4>
-												</div>
-												<div class="modal-body">
-													<p>Hello</p>
-												</div>
-												<div class="modal-footer">
-													<button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
+							<div class="col-xs-12 col-sm-6 col-md-8 col-sm-offset-2 col-md-offset-2">
+								<form role="form" class="form-horizontal" name="form" ng-submit="register()" novalidate>
+									<h2 style="color: blue; font-weight: bold;">Đăng ký</h2>
+									<hr class="colorgraph">
+									<div class="row">
+										<div class="col-xs-12 col-sm-12 col-md-12">
+											<div class="form-group">
+												<div ng-show="success" class="text-success text-center">Đăng ký thành viên thành công !</div>
+												<input type="text" name="fullname" id="fullname" class="form-control input-lg" placeholder="Họ và tên" tabindex="1" ng-model="fullname" ng-minlength="6" ng-maxlength="50" ng-pattern="/^[a-zA-Z, ]+$/" required>
+												<i class="fa fa-check text-success" ng-show="form.fullname.$dirty && form.fullname.$valid"></i>
+												<div ng-show="form.fullname.$dirty && form.fullname.$invalid" class="text-danger"><i class="fa fa-times text-danger"></i>
+													<span ng-show="form.fullname.$error.required">Họ tên không được bỏ trống</span>
+													<span ng-show="form.fullname.$error.minlength">Họ tên phải dài hơn 6 kí tự</span>
+													<span ng-show="form.fullname.$error.maxlength">Họ tên phải ngắn hơn 50 kí tự</span>
+													<span ng-show="form.fullname.$error.pattern">Họ tên chỉ bao gồm các kí tự chữ cái</span>
 												</div>
 											</div>
-											<!-- /.modal-content -->
-										</div>
-										<!-- /.modal-dialog -->
-									</div>
-									<!-- /.modal -->
+
+											<div class="form-group">
+												<input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email" tabindex="2" ng-model="email" autocomplete="off" required>
+												<i class="fa fa-check text-success" ng-show="form.email.$dirty && form.email.$valid">
+</i>
+												<!--Dấu check thể hiện việc nhập dữ liệu được nhập là hợp lệ-->
+
+												<div ng-show="form.email.$dirty && form.email.$invalid" class="text-danger">
+													<i class="fa fa-times text-danger"></i>
+
+													<!--Nếu dữ liệu không hợp lệ-->
+													<span ng-show="form.email.$error.required">Bạn chưa nhập địa chỉ email</span>
+
+													<!--Custom thông báo email không được rỗng-->
+													<span ng-show="form.email.$error.email">Không đúng định dạng email</span>
+
+													<!--Thông báo email sai định dạng-->
+												</div>
+											</div>
+
+											<div class="form-group">
+												<input type="phone" name="phone" id="phone" class="form-control input-lg" placeholder="Số Điện Thoại" tabindex="3" ng-model="phone" ng-minlength = "10"
+           ng-maxlength = "11" ng-partern="[0-9]" required>
+												<i class="fa fa-check text-success" ng-show="form.phone.$dirty && form.phone.$valid">
+</i>
+												<!--Dấu check thể hiện việc nhập dữ liệu được nhập là hợp lệ-->
+
+												<div ng-show="form.phone.$dirty && form.phone.$invalid" class="text-danger">
+													<i class="fa fa-times text-danger"></i>
+													<span ng-show="form.phone.$error.required">Bạn chưa nhập SĐT</span>
+													<span ng-show="form.phone.$error.minlength">Nhập SĐT không đúng</span>
+													<span ng-show="form.phone.$error.maxlength">Nhập SĐT không đúng</span>
+
+													<span ng-show="form.phone.$error.partern">Nhập SĐT không đúng</span>
+
+												</div>
+
+											</div>
+											<div class="row">
+												<div class="col-xs-12 col-sm-6 col-md-6">
+													<div class="form-group">
+														<input name="password" ng-model="password" type="password" value="" class="form-control input-lg" placeholder="Mật khẩu" ng-minlength="6" ng-maxlength="30" required> </div>
+													<i class="fa fa-check text-success" ng-show="form.password.$dirty && form.password.$valid"></i>
+													<div ng-show="form.password.$dirty && form.password.$invalid" class="text-danger"><i class="fa fa-times text-danger"></i>
+														<span ng-show="form.password.$error.required">Mật khẩu không được bỏ trống</span>
+														<span ng-show="form.password.$error.minlength">Mật khẩu phải dài hơn 6 kí tự</span>
+														<span ng-show="form.password.$error.maxlength">Mật khẩu phải ngắn hơn 30 kí tự</span>
+													</div>
+
+												</div>
+												<div class="col-xs-12 col-sm-6 col-md-6">
+													<div class="form-group">
+														<input type="password" ng-model="password_confirmation" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Nhập lại mật khẩu" tabindex="6" ng-minlength="6" ng-maxlength="30" required>
+														<i class="fa fa-check text-success" ng-show="form.password_confirmation.$dirty && form.password_confirmation.$valid"></i>
+														<div ng-show="form.password_confirmation.$dirty && form.password_confirmation.$invalid" class="text-danger"><i class="fa fa-times text-danger"></i>
+															<span ng-show="form.password_confirmation.$error.required">Mật khẩu không được bỏ trống</span>
+															<span ng-show="form.password_confirmation.$error.minlength">Mật khẩu phải dài hơn 6 kí tự</span>
+															<span ng-show="form.password_confirmation.$error.maxlength">Mật khẩu phải ngắn hơn 30 kí tự</span>
+														</div>
+													</div>
+												</div>
+											</div>
+
+											<hr class="colorgraph">
+											<div class="row">
+												<div class="col-xs-12 col-md-6"><input type="submit" value="Đăng ký" class="btn btn-primary btn-block btn-lg" tabindex="7" ng-disabled="!form.$dirty || (form.$dirty && form.$invalid)"></div>
+												<div class="col-xs-12 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg">Đăng nhập</a></div>
+											</div>
+								</form>
+								</div>
 								</div>
 							</div>
+
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-			<!--End Divide Bodu->
+			<!--End Divide Body->
 		</div>
 		<!--End Content-->
 			<!--Footer-->
