--- a/WebsiteCaNhan4/danhsachbaigiang.html
+++ b/WebsiteCaNhan4/danhsachbaigiang.html
@@ -11,12 +11,7 @@
     <link rel="shortcut icon" href="img/icon.ico" />
     <!--  Responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Dong Ho -->
-    <link href="css/datepicker.css" rel="stylesheet">
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/datepicker.js"></script>
-    <script src="js/datepicker.en.js"></script>
-    <!-- End DongHo -->
+  
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700">
     <script src="jquery/jquery-3.1.0.js"></script>
@@ -218,13 +213,14 @@
 
             </div>
             <!--End Divide Bodu->
-            </div>
+           
             <!--End Content-->
             <!--Footer-->
-            <div class="footer" class="row">
+           <!--Footer-->
+         <div class="footer" class="row">
                 <div class="container">
                     <div class="col-md-12 text-center">
-                        <img style="width:40px;	height:40px;padding: 5px" src="img/logo.jpg"> &copy 2016 - BẢN QUYỀN THUỘC VỀ NHÓM 14 LTW
+                        <img style="width:40px; height:40px;padding: 5px" src="img/logo.jpg"> &copy 2016 - BẢN QUYỀN THUỘC VỀ NHÓM 14 LTW
                     </div>
                 </div>
             </div>
