--- a/WebsiteCaNhan4/trangdangkykhoahoc.html
+++ b/WebsiteCaNhan4/trangdangkykhoahoc.html
@@ -105,7 +105,7 @@
 		<div class="content">
 		<!--Devide Body-->
 			<div class="content-body">
-				<div class="container">
+				<div class="container-fluid">
 					<div class="col-md-12">
 						<div class="col-md-7" >
 							<img src="img/webcn.PNG" style="width: 100%">
