--- a/WebsiteCaNhan4/trangdanhsachkhoahoccuatui.html
+++ b/WebsiteCaNhan4/trangdanhsachkhoahoccuatui.html
@@ -106,11 +106,11 @@
 								</li>
 
 								<li class=""><a href="#" class="main-menu">Liên hệ </a></li>
-								<button class="glyphicon glyphicon-bell" id = "thongbao">
-			                       
-			                     </button>	
+								<li class="dropdown" >
+			                       <a href="#" class="glyphicon glyphicon-bell" id = "thongbao"></a>
+			                     </li>	
 			                    <li class="dropdown pull-right" id = "user">
-						          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Chào, Pé Dứa <span class="glyphicon glyphicon-user pull-right"></span></a>
+						          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Chào, Pé Dứa <span class="glyphicon glyphicon-user text-center"></span></a>
 						          <ul class="dropdown-menu">	
 						          	 <li><a href="#">Tin nhắn<span class="badge pull-right"> 42 </span></a></li>
 						            <li class="divider"></li>					            
