--- a/WebsiteCaNhan4/trangdanhsachkhoahoccuatui.html
+++ b/WebsiteCaNhan4/trangdanhsachkhoahoccuatui.html
@@ -114,7 +114,7 @@
 						          <ul class="dropdown-menu">	
 						          	 <li><a href="#">Tin nhắn<span class="badge pull-right"> 42 </span></a></li>
 						            <li class="divider"></li>					            
-						            <li><a href="#">Hồ sơ của bạn<span class="glyphicon glyphicon-user pull-right"></span></a></li>
+						            <li><a href="trangthongtincanhan.html">Hồ sơ của bạn<span class="glyphicon glyphicon-user pull-right"></span></a></li>
 						            <li class="divider"></li>						           
 						            <li><a href="#">Cài đặt<span class="glyphicon glyphicon-cog pull-right"></span></a></li>
 						            <li class="divider"></li>
